--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "4.14.0",
+    "i18next": "20.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "11.8.11",
+    "react-redux": "7.2.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "4.0.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
